--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
    <!-- Section Content --> 
 
     <article>
-    <h3>Clair Obscur</h3>
+   
+        <h3>Clair Obscur</h3>
+   
     <img src="img/clair obscur.jpg" title="Clair Obscur Expedition 33">
+   
     <p>
         Description: <a href = "https://store.steampowered.com/app/1903340/Clair_Obscur_Expedition_33/">Clair Obscur Expedition 33</a> is a critically accllaimed rpg (role-playing game) with strong storytelling and performance, with slick production and next gen graphics. It's developed by a small gaming development team at Sandfall Interatcive. 
     </p>
@@ -54,8 +57,11 @@
     </ul>
 
    <article>
+ 
     <h3>Hollow Knight Silksong</h3>
+ 
     <img src="img/Silksong.jpg" title="Hollow Knight Silksong">
+   
     <p>
         Description: Hollow Knight Silksong is a sequel to the award winning Hollow Knight, featuring 2D metroidvania platformer with Souls-like elements. As Hornet, adventure through a kingdom ruled by silk and song adventuring through an unfamiliar world, fighting mighty enemies and solving ancient riddles as you ascend to the kingdom's peak.    
     </p>
@@ -69,7 +75,9 @@
 
 <article>
     <h3> Hades 2 </h3>
+   
     <img src="img/Hades 2.jpg" title="Hades 2">
+   
     <p>
         Description: Hades 2 is a sequel from Supergiant Games building off the aspects from the rogue-like dungeon crawling from the first game with new, action-packed, replayable experience rooted in the Underworld of Greek myth and its connections to witchcraft. Playing as the immortal Princess of the Underworld, players will explore a larger, deeper mythic world, vanquishing the forces of the Titan of Time with Olympian powers, in a story that continually unfolds through every setback and accomplishment.     
     </p>
@@ -80,9 +88,15 @@
         
     </ul>
 
-<!-- Wireframe --> 
 
+    <!-- Wireframe --> 
+<h4> Wireframe  </h4>
+<ul> 
+    <p> <a href = "https://www.figma.com/community/file/1555184868572035624">Wireframe</a>  
+    </p>
+    
 
+</ul>
 
 
 
